--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -6,8 +6,8 @@ all: p2p
 p2p: p2p.o p2p_lib.o
 	$(CC) $(CFLAGS) -o p2p $^
 p2p.o: p2p.c
-	$(CC) -c -o p2p.o p2p.c
+	$(CC) $(CFLAGS) -c -o p2p.o p2p.c
 p2p_lib.o: p2p_lib.c
-	$(CC) -c -o p2p_lib.o p2p_lib.c
+	$(CC) $(CFLAGS) -c -o p2p_lib.o p2p_lib.c
 clean:
 	rm -f p2p p2p.o p2p_lib.o
